removing a comment and fixing indentation on md template

--- a/package.json
+++ b/package.json
@@ -1,7 +1,6 @@
 {
   "name": "readme-generator",
   "version": "1.0.0",
-  "description": "",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
@@ -18,5 +17,7 @@
   "homepage": "https://github.com/epc318/README-generator#readme",
   "dependencies": {
     "inquirer": "^8.2.0"
-  }
+  },
+  "devDependencies": {},
+  "description": ""
 }
